Make unit tests package-private