@@ -31,6 +31,13 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.0.0-M5</version>
+				<configuration>
+					<argLine>
+						${argLine}
+						--add-opens dev.kske.eventbus.core/dev.kske.eventbus.core=ALL-UNNAMED
+						--add-opens dev.kske.eventbus.core/dev.kske.eventbus.core.handler=ALL-UNNAMED
+					</argLine>
+				</configuration>
 			</plugin>
 
 			<!-- Generate coverage report -->
